# cmake_gnustl_shared_ndk_unwind_bug

./: CMakeLists.txt  README.md
lib1/: CMakeLists.txt
lib1/src/: lib1.cpp  lib1.h
lib2/: CMakeLists.txt
lib2/src/: lib2.cpp
